sparkle animations / next showcase-focus functionality

--- a/resources/scss/public/partials/_showcase.scss
+++ b/resources/scss/public/partials/_showcase.scss
@@ -10,7 +10,7 @@
         overflow:hidden;
         transform:skewY(-9deg);
         transform-origin:0;
-        background:linear-gradient(0deg,#edf2f7,rgba(237,242,247,0));
+        background:linear-gradient(0deg,$graytone-background,rgba(237,242,247,0));
         box-shadow:$standard-shadow;
 
     }
@@ -26,6 +26,96 @@
                     margin-bottom:20px;
                     margin-top:65px;
                 }
+
+                @keyframes sparkle{
+                    0%{
+                        background-position:0;
+                    }
+                    40%{
+                        background-position:-731px;
+                    }
+                    100%{
+                        background-position:-731px;
+                    }
+                }
+
+                @keyframes sparklecircle{
+                    0%{
+                        background-position:0;
+                    }
+                    40%{
+                        background-position:-816px;
+                    }
+                    100%{
+                        background-position:-816px;
+                    }
+                }
+
+                @keyframes sparklesfour{
+                    0%{
+                        background-position:0;
+                    }
+                    40%{
+                        background-position:-600px;
+                    }
+                    100%{
+                        background-position:-600px;
+                    }
+                }
+
+                .sparkles{
+                    position:absolute;
+                    top:56px;
+                    left:30px;
+                    display:block;
+                    width:43px;
+                    height:43px;
+                    background-image:url("../img/sparkles3.png");
+                    background-size:774px 43px;
+                    background-position:-731px;
+                    animation: sparkle 1.5s steps(17, start) forwards infinite;
+                }
+
+                .sparklestwo{
+                    position:absolute;
+                    display:block;
+                    right:0;
+                    top:155px;
+                    width:24px;
+                    height:24px;
+                    background-image:url("../img/circlesparkle.png");
+                    background-size:840px 24px;
+                    background-position:-816px;
+                    animation: sparklecircle 3s steps(34, start) forwards infinite;
+                    animation-delay:1.2s;
+                }
+
+                .sparklesfour{
+                    position:absolute;
+                    display:block;
+                    width:25px;
+                    height:25px;
+                    top:260px;
+                    background-image:url("../img/sparkles4.png");
+                    background-size:625px 25px;
+                    background-position:-600px;
+                    animation: sparklesfour 3s steps(23, start) forwards infinite;
+                    animation-delay:0.9s;
+                }
+
+                .sparklesfive{
+                    position:absolute;
+                    display:block;
+                    width:25px;
+                    height:25px;
+                    right:0;
+                    top:35px;
+                    background-image:url("../img/sparkles4.png");
+                    background-size:625px 25px;
+                    background-position:-600px;
+                    animation: sparklesfour 3s steps(23, start) forwards infinite;
+                }
+
                 
                 .showcase-preview{
                     position:relative;
@@ -38,6 +128,19 @@
                     background-size:cover;
                     top:55px;
                     transition:all 0.2s ease-in;
+                    animation: float 5s ease-in-out infinite;
+
+                    @keyframes float{
+                        0%{
+                            transform:translateY(0px);
+                        }
+                        50%{
+                            transform:translateY(10px);
+                        }
+                        100%{
+                            transform:translateY(0px);
+                        }
+                    }
 
                     &:hover{
                             transform:translateY(-1px);
@@ -97,9 +200,11 @@
                         transition: all 0.2s ease-in;
                         background-size:cover;
                         background-position-x:center;
+                        filter: grayscale(100%);
 
                         &:hover{
                             transform:translateY(-1px);
+                            filter: grayscale(0%);
                         }
 
                         &:hover .desc-tag{
