--- a/resources/scss/public/partials/_showcase-focus.scss
+++ b/resources/scss/public/partials/_showcase-focus.scss
@@ -49,7 +49,7 @@
                 width:400px;
                 height:140px;
                 min-height:105px;
-                background-color:#fff;
+                background-color:$graytone-background;
                 text-align:center;
 
                 .fa-times{
@@ -65,15 +65,17 @@
 
                 .icon-wrapper{
                     box-shadow:none;
-                    margin-top:35px;
+                    margin-top:20px;
 
                     figure{
                         display:inline-block;
+
 
                         img{
                             width:30px;
                             margin-left:5px;
                             margin-right:5px;
+                            margin-top:10px;
                         }
                     }
                 }
