--- a/resources/scss/public/partials/_showcase.scss
+++ b/resources/scss/public/partials/_showcase.scss
@@ -192,7 +192,7 @@
                         width:100%;
                         height:300px;
                         box-shadow:$standard-shadow;
-                        border-radius:5px;
+                        //border-radius:5px;
                         background-color:#fff;
                         margin-left:auto;
                         margin-top:25px;
