--- a/resources/scss/public/partials/_showcase-focus.scss
+++ b/resources/scss/public/partials/_showcase-focus.scss
@@ -8,31 +8,36 @@
     background-color:rgba(0,0,0,0.48);
     z-index:999;
     
+        .center-div{
+        position:absolute;
+        left:0;
+        right:0;
+        top:0;
+        bottom:0;
 
-    .middle {
-        display: table-cell;
-        vertical-align: middle;
-        .inner-wrapper {
+        width:1275px;
+        height:90%;
+        margin:auto;
+
+        .left-side{
             position:relative;
-            margin-left: auto;
-            margin-right: auto; 
-            width: 1275px;
-            height:90%;
-            display:flex;
-            flex-direction: column;
+            float:left;
+            height:100%;
+            width:65%;
 
-            div{
-                box-shadow:$standard-shadow;
-            }
-
-            .image-view{
+            .image-preview{
                 position:absolute;
-                display:inline-block;
-                width:858px;
-                max-height:82%;
-                background-color:#fff;
+                top:0;
+                right:0;
+                bottom:0;
+                left:0;
+
+                margin-top:auto;
+                margin-bottom:auto;
+
+                max-height:100%;
+                width:100%;
                 overflow-y:scroll;
-                flex:1;
 
                 &::-webkit-scrollbar { 
                     display: none; 
@@ -40,17 +45,24 @@
 
                 img{
                     width:100%;
+                    box-shadow:$standard-shadow;
                 }
             }
-            .technology-view{
-                position:absolute;
-                right:0;
-                top:0;
-                width:400px;
+        }
+        .right-side{
+            float:right;
+            width:33%;
+            height:100%;
+
+            .tech-view{
+                position:relative;
+                width:100%;
                 height:140px;
-                min-height:105px;
                 background-color:$graytone-background;
+                margin-bottom:25px;
                 text-align:center;
+                padding-top:20px;
+                box-shadow:$standard-shadow;
 
                 .fa-times{
                     position:absolute;
@@ -65,7 +77,7 @@
 
                 .icon-wrapper{
                     box-shadow:none;
-                    margin-top:20px;
+                    margin-top:10px;
 
                     figure{
                         display:inline-block;
@@ -80,24 +92,19 @@
                             margin-top:10px;
                             transition:all 0.1s ease-in;
 
-
                         }
                     }
                 }
             }
-            .description-view{
-                position:absolute;
-                right:0;
-                top:160px;
-                width:400px;
-                height:435px;
-                overflow:hidden;
-                background-color:#fff;
-                flex-grow: 1;
 
-                .desc{
-                    margin-top:195px;
-                }
+            .desc-view{
+                position:relative;
+                width:100%;
+                height:435px;
+                background-color:#fff;
+                margin-bottom:25px;
+                overflow:hidden;
+                box-shadow:$standard-shadow;
 
                 .slant{
                     position:absolute;
@@ -106,10 +113,11 @@
                     height:200px;
                     background-color:$graytone-background;
                     transform:skewY(-4deg);
+                    box-shadow:$standard-shadow;
 
                     h2{
                         transform:skewY(4deg);
-                        margin-top:90px;
+                        margin-top:100px;
                         padding-left:20px;
                         padding-right:20px;
                         font-size:24px;
@@ -118,24 +126,29 @@
                     p{
                         transform:skewY(4deg);
                         font-size:12px;
-                        
+                        padding-left:20px;
+                        padding-right:20px;
                     }
                 }
 
                 p{
-                    padding-left:20px;
-                    padding-right:20px;
+                    padding-left:10px;
+                    padding-right:10px;
+                }
+
+                .desc-p{
+                    margin-top:195px;
                 }
             }
-            .next-view{
-                position:absolute;
-                right:0;
-                bottom:0px;
-                width:400px;
-                height:260px;
+
+            .nxt-view{
+                position:relative;
+                width:100%;
+                height:251px;
                 background-color:#fff;
                 background-position-x:center;
                 background-size:cover;
+                box-shadow:$standard-shadow;
 
                 .next-view-overlay{
                     position:absolute;
@@ -151,24 +164,6 @@
                         bottom:10px;
                         right:15px;
                     }
-                }
-            }
-            .more-image-view{
-                position:absolute;
-                left:0;
-                bottom:0;
-                height:135px;
-                width:858px;
-                background-color:$graytone-background;
-
-                .no-image{
-                    position:absolute;
-                    width:100%;
-                    height:100%;
-                    background-color:rgba(0,0,0,0.50);
-                    text-align:center;
-                    padding-top:35px;
-
                 }
             }
         }
