more styling to focus popup and body now scroll locks

--- a/resources/scss/public/partials/_default.scss
+++ b/resources/scss/public/partials/_default.scss
@@ -87,3 +87,8 @@ a{
     width:200px;
     border-bottom:4px solid $secondary-blue;
 }
+
+.scroll-lock{
+    height:100%;
+    overflow-y:hidden;
+}
