--- a/resources/scss/public/partials/_showcase-focus.scss
+++ b/resources/scss/public/partials/_showcase-focus.scss
@@ -21,6 +21,7 @@
 
         .left-side{
             position:relative;
+            display:flex;
             float:left;
             height:100%;
             width:65%;
@@ -35,6 +36,7 @@
                 margin-top:auto;
                 margin-bottom:auto;
 
+                min-height:615px;
                 max-height:100%;
                 width:100%;
                 overflow-y:scroll;
@@ -53,11 +55,13 @@
             float:right;
             width:33%;
             height:100%;
+            display:flex;
+            flex-direction:column;
 
             .tech-view{
                 position:relative;
                 width:100%;
-                height:140px;
+                min-height:140px;
                 background-color:$graytone-background;
                 margin-bottom:25px;
                 text-align:center;
@@ -100,11 +104,11 @@
             .desc-view{
                 position:relative;
                 width:100%;
-                height:435px;
+                min-height:390px;
                 background-color:#fff;
-                margin-bottom:25px;
                 overflow:hidden;
                 box-shadow:$standard-shadow;
+                flex-grow:1;
 
                 .slant{
                     position:absolute;
@@ -144,11 +148,13 @@
             .nxt-view{
                 position:relative;
                 width:100%;
+                min-height:40px;
                 height:251px;
                 background-color:#fff;
                 background-position-x:center;
                 background-size:cover;
                 box-shadow:$standard-shadow;
+                margin-top:20px;
 
                 .next-view-overlay{
                     position:absolute;
