--- a/resources/scss/public/variables/_colors.scss
+++ b/resources/scss/public/variables/_colors.scss
@@ -21,6 +21,6 @@ $gray-font: #95989A;
 $border-color: #F1F7FB;
 
 /* Background colors */
-$graytone-background: #edf2f7;
+$graytone-background: #ecf0f1;
 
 //#edf2f7
