--- a/resources/scss/public/partials/_header.scss
+++ b/resources/scss/public/partials/_header.scss
@@ -41,12 +41,40 @@ header{
             color:#FFF;
             letter-spacing:15px;
             font-weight:900;
+            animation: fly-in 1.2s ease-out 1; 
+
+            @keyframes fly-in{
+            0%{
+                opacity:0;
+                transform:translateY(-150px);
+            }
+            100%{
+                opacity:1;
+                transform:translateY(0px);
+            }
+        }
+
+
         }
 
         h3{
             text-align:center;
             font-size:14px; 
             color:rgba(255, 255, 255, 0.65);
+            animation: fly-up 1.2s ease-out 1;
+            animation-delay:1.2s;
+            opacity:0;
+
+            @keyframes fly-up{
+                0%{
+                    opacity:0;
+                    transform:translateY(90px);
+                }
+                100%{
+                    opacity:1;
+                    transform:translateY(0px);
+                }
+            }
         }
 
         p{
