--- a/views/reference-letter-view.html
+++ b/views/reference-letter-view.html
@@ -1,7 +1,7 @@
 <div class="reference-letter-wrapper">
 
     <div class="header">
-        <p class="close-popup closePopUp" ng-click="closePopUp($event)">close</p>
+        <p class="close-popup closePopUp" ng-click="closePopUp($event)"><i class="fa fa-times"></i></p>
         <img src="assets/img/ordbogen-logo.svg" alt="ordbogen logo">
     </div>
 
