--- a/resources/scss/public/partials/_popup.scss
+++ b/resources/scss/public/partials/_popup.scss
@@ -25,6 +25,11 @@
     background-color:#fff;
     border-radius:5px;
 
+    @media only screen and (max-width:400px){
+      max-height:95%;
+      overflow:scroll;
+    }
+
     .close-popup{
       float:right;
 
@@ -69,6 +74,10 @@
     @media only screen and (max-width:880px){
       width:500px;
       margin-top:25px;
+    }
+
+    @media only screen and (max-width:400px){
+      width:95%;
     }
   }
 }
