--- a/resources/scss/public/partials/_reference-letter.scss
+++ b/resources/scss/public/partials/_reference-letter.scss
@@ -15,6 +15,11 @@
             position:absolute;
             top:40px;
             right:30px;
+
+            @media only screen and (max-width:400px){
+                top:10px;
+                right:20px;
+            }
         }
 
         img{
