--- a/resources/scss/public/partials/_reference.scss
+++ b/resources/scss/public/partials/_reference.scss
@@ -9,6 +9,10 @@
     padding-top:160px;
     box-shadow:$standard-shadow;
 
+    @media only screen and (max-width:400px){
+        padding-top:90px;
+    }
+
     .container{
 
         .title-box{
@@ -59,6 +63,12 @@
                         left:0;
                         padding-left:15px;
                         padding-right:15px;
+
+                        @media only screen and (max-width:400px){
+                            right:0;
+                            margin:0 auto;
+                            width:270px;
+                        }
                     }
 
                     h2{
