--- a/resources/scss/public/partials/_showcase.scss
+++ b/resources/scss/public/partials/_showcase.scss
@@ -18,6 +18,10 @@
         .row{
             .col-md-6{
 
+                @media only screen and (max-width:400px){
+                    text-align:center;
+                }
+
                 i{
                     color:$primary;
                 }
@@ -25,6 +29,10 @@
                 h2{
                     margin-bottom:20px;
                     margin-top:115px;
+
+                    @media only screen and (max-width:400px){
+                        margin-top:25px;
+                    }
                 }
 
                 @keyframes sparkle{
@@ -172,6 +180,11 @@
                     @media only screen and (max-width:991px){
                         margin:0 auto;
                         margin-top:65px;
+                    }
+
+                    @media only screen and (max-width:400px){
+                        width:100%;
+                        margin-top:-25px;
                     }
                 }
 
